# hou-scene-inspector

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  box_wired_xform.hip  empty.hip  one_geo_node.hip  one_geo_with_box.hip  pyproject.toml
docs/: compatibility.md  oracle-coverage.md
src/hip_reader/: __init__.py  cli.py  cpio.py  jsonutil.py  oracle.py  oracle_matrix.py  parsers.py  scene.py
src/hou_scene_inspector/: __init__.py  cli.py  cpio.py  jsonutil.py  oracle.py  oracle_matrix.py  parsers.py  scene.py
tests/: test_cli.py  test_cpio.py  test_oracle.py  test_parsers.py  test_scene.py
tests/fixtures/golden/: subnet_inside_geo_tree.json
tests/fixtures/hip/: animated_translate.hip  box_wired_xform.hip  empty.hip  manifest.json  simple_hda_definition.hda  string_expression_parm.hip
tests/fixtures/hip/source_truth/: animation_curve_variants.hip  manifest.json
tests/fixtures/oracles/source_truth/: animation_curve_variants.oracle.json
tools/houdini/: export_oracle.py  generate_fixtures.py
