[project]
name = "hou-scene-inspector"
version = "0.1.0"
description = ".hip scene-structure inspection"
readme = "README.md"
authors = [
    { name = "Ahmed Hindy", email = "Ahmed.hindy96@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hou-scene-inspector = "hou_scene_inspector.cli:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "hou_scene_inspector"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
